--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,20 +161,23 @@
     "        if node not in evidences.keys():\n",
     "            try:\n",
     "                # prob = prop.query([node], evidence=evidences).values[1]\n",
-    "                prob = 0\n",
+    "                prob = 0.000\n",
     "                print(prob)\n",
     "                probH = int(prob * 255)\n",
     "                color = '#' + format(probH, '02X') +''+ format(255-probH, '02X') + '00'\n",
     "                CVE = nodes[node]['CVE']\n",
     "                LABEL = nodes[node]['label']\n",
+    "                number = LABEL.split(\":\")[0]\n",
+    "                prob = \"{:.3f}\".format(prob)\n",
+    "                shape = nodes[node]['shape']\n",
     "                if CVE != 'null':\n",
-    "                    dot += f'  {node} [label=\"{node} ({LABEL.split(':')[0]})\\\\n{CVE}\\\\n{format(prob, '.3f')}\", color=\"{color}\", penwidth=3, shape=\"{nodes[node]['shape']}\"];\\n'\n",
+    "                    dot += f'  {node} [label=\\\"{node} ({number})\\\\n{CVE}\\\\n{prob}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
     "                else:\n",
     "                    correspondance = re.search(regex, LABEL)\n",
     "                    if correspondance:\n",
-    "                        dot += f'  {node} [label=\"{node} ({LABEL.split(':')[0]})\\\\n{correspondance.group(1)}\\\\n{format(prob, '.3f')}\", color=\"{color}\", penwidth=3, shape=\"{nodes[node]['shape']}\"];\\n'\n",
+    "                        dot += f'  {node} [label=\\\"{node} ({number})\\\\n{correspondance.group(1)}\\\\n{\"{:.3f}\".format(prob)}\\\", color=\\\"{color}\\\", penwidth=3, shape=\\\"{shape}\\\"];\\n'\n",
     "                    else:\n",
-    "                        dot += f'  {node} [label=\"{node} ({LABEL.split(':')[0]})\\\\n{LABEL}\\\\n{format(prob, '.3f')}\", color=\"{color}\", penwidth=3, shape=\"{nodes[node]['shape']}\"];\\n'\n",
+    "                        dot += f'  {node} [label=\"{node} ({number})\\\\n{LABEL}\\\\n{\"{:.3f}\".format(prob)}\", color=\"{color}\", penwidth=3, shape=\"{shape}\"];\\n'\n",
     "            except:\n",
     "                dot += ''\n",
     "    for edge in BAG.edges():\n",
@@ -186,17 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2:RULE 10 (dc Sync):0.8\n",
-      "5:RULE 11 (lateral move to dcsync):0.8\n",
-      "8:RULE 12 (ECS8 from http to pass the ticket):0.8\n",
-      "17:RULE 6 (valid credentials may be found):0.8\n"
+      "6:RULE 6 (valid credentials may be found):0.8\n"
      ]
     }
    ],
@@ -227,34 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+-------+-----+-----------------------+\n",
-      "| 16    | 16(0) | ... | 16(1)                 |\n",
-      "+-------+-------+-----+-----------------------+\n",
-      "| 17    | 17(0) | ... | 17(1)                 |\n",
-      "+-------+-------+-----+-----------------------+\n",
-      "| 18    | 18(0) | ... | 18(1)                 |\n",
-      "+-------+-------+-----+-----------------------+\n",
-      "| 15(0) | 1.0   | ... | 9.999999984209324e-22 |\n",
-      "+-------+-------+-----+-----------------------+\n",
-      "| 15(1) | 0.0   | ... | 1.0                   |\n",
-      "+-------+-------+-----+-----------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(BAG.get_cpds(15))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -262,44 +242,22 @@
      "output_type": "stream",
      "text": [
       "WARNING:pgmpy:Replacing existing CPD for 2\n",
-      "WARNING:pgmpy:Replacing existing CPD for 4\n",
       "WARNING:pgmpy:Replacing existing CPD for 6\n",
-      "WARNING:pgmpy:Replacing existing CPD for 8\n",
-      "WARNING:pgmpy:Replacing existing CPD for 10\n",
-      "WARNING:pgmpy:Replacing existing CPD for 13\n",
-      "WARNING:pgmpy:Replacing existing CPD for 14\n",
-      "WARNING:pgmpy:Replacing existing CPD for 16\n",
-      "WARNING:pgmpy:Replacing existing CPD for 17\n",
-      "WARNING:pgmpy:Replacing existing CPD for 18\n",
-      "WARNING:pgmpy:Replacing existing CPD for 20\n"
+      "WARNING:pgmpy:Replacing existing CPD for 8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Permissions move'}\n",
-      "[3, 'unknown2', 'Lskills', 'Permissions move']\n",
-      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Lateral move'}\n",
-      "[5, 'unknown4', 'Lskills', 'Lateral move']\n",
-      "{'tool': 'certipy', 'skills': 'L', 'Type': 'ADCS'}\n",
-      "[7, 'unknown6', 'Lskills', 'ADCS']\n",
-      "{'tool': 'impacket and PetitPotam.py', 'skills': 'H', 'Type': 'No credentials'}\n",
-      "[9, 'impacket8', 'Hskills', 'No credentials']\n",
-      "{'tool': 'impacket', 'skills': 'L', 'Type': 'Known vulnerabilities'}\n",
-      "[11, 'unknown10', 'Lskills', 'Known vulnerabilities']\n",
-      "{'tool': 'impacket', 'skills': 'H', 'Type': 'MITM'}\n",
-      "[7, 'unknown13', 'Hskills', 'MITM']\n",
-      "{'tool': 'impacket and CVE-2020-1472-exploit.py', 'skills': 'L', 'Type': 'MITM'}\n",
-      "[7, 'impacket14', 'Lskills', 'MITM']\n",
-      "{'tool': 'impacket and CVE-2020-1472-exploit.py', 'skills': 'L', 'Type': 'MITM'}\n",
-      "[9, 'impacket16', 'Lskills', 'MITM']\n",
       "{'tool': 'impacket and privexchange.py', 'skills': 'H', 'Type': 'Known vulnerabilities'}\n",
-      "[11, 'impacket17', 'Hskills', 'Known vulnerabilities']\n",
+      "[3, 'impacket2', 'Hskills', 'Known vulnerabilities']\n",
       "{'tool': 'Unknown', 'skills': 'L', 'Type': 'Privilege escalation'}\n",
-      "[19, 'unknown18', 'Lskills', 'Privilege escalation']\n",
+      "Unknown\n",
+      "[7, 'unknown6', 'Lskills', 'Privilege escalation']\n",
       "{'tool': 'Unknown', 'skills': 'L', 'Type': 'CQCM'}\n",
-      "[9, 'unknown20', 'Lskills', 'CQCM']\n"
+      "Unknown\n",
+      "[5, 'unknown8', 'Lskills', 'CQCM']\n"
      ]
     }
    ],
@@ -332,7 +290,7 @@
     "\n",
     "# Import all the dependencies\n",
     "cpt_l4 = create_AND_table([MAX, MAX, MAX, MAX])\n",
-    "with open('C:/Users/docuser/Documents/ImperialWork/Threat_Inteligence/CVE_knowledge_tooling_skills.csv', mode='r') as ktsfile:\n",
+    "with open('./Threat_Inteligence/CVE_knowledge_tooling_skills.csv', mode='r') as ktsfile:\n",
     "    reader = csv.DictReader(ktsfile)\n",
     "    kts_dict = {}\n",
     "    for row in reader:\n",
@@ -350,7 +308,8 @@
     "                BAG.add_edge(name, id)\n",
     "                BAG.add_edge('impacketP', name)\n",
     "                BAG.add_cpds(TabularCPD(name, 2, create_OR_table([0.7]).T, ['impacketP'], evidence_card=2*np.ones(1)))\n",
-    "            elif row['tool'] != 'unknown':\n",
+    "            elif row['tool'] == 'Unknown':\n",
+    "                print(row['tool'])\n",
     "                name = 'unknown' + str(id)\n",
     "                BAG.add_edge(name, id)\n",
     "                BAG.add_cpds(TabularCPD(name, 2, [[0.5], [0.5]]))\n",
@@ -370,31 +329,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\MarkovNetwork.py:474: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  S_by_C = {key: S[key] / C[key] for key in S}\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 0 into shape (2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[53], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m evidence \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(output_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m----> 3\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(\u001b[43mto_dot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBAG\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevidence\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBAG_ref\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.dot\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      5\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(to_dot(BAG_ref, nodes, evidence))\n",
-      "Cell \u001b[1;32mIn[49], line 111\u001b[0m, in \u001b[0;36mto_dot\u001b[1;34m(BAG, nodes, evidences)\u001b[0m\n\u001b[0;32m    109\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mto_dot\u001b[39m(BAG, nodes, evidences):\n\u001b[0;32m    110\u001b[0m     dot \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdigraph G \u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m--> 111\u001b[0m     prop \u001b[38;5;241m=\u001b[39m \u001b[43mBeliefPropagation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBAG\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    112\u001b[0m     regex \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+:RULE \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+ \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m((.*?)\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m):\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    113\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m  nodes\u001b[38;5;241m.\u001b[39mkeys():\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\ExactInference.py:700\u001b[0m, in \u001b[0;36mBeliefPropagation.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m    697\u001b[0m \u001b[38;5;28msuper\u001b[39m(BeliefPropagation, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(model)\n\u001b[0;32m    699\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, JunctionTree):\n\u001b[1;32m--> 700\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mjunction_tree \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_junction_tree\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    701\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    702\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mjunction_tree \u001b[38;5;241m=\u001b[39m copy\u001b[38;5;241m.\u001b[39mdeepcopy(model)\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\BayesianNetwork.py:511\u001b[0m, in \u001b[0;36mBayesianNetwork.to_junction_tree\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    474\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    475\u001b[0m \u001b[38;5;124;03mCreates a junction tree (or clique tree) for a given Bayesian Network.\u001b[39;00m\n\u001b[0;32m    476\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    508\u001b[0m \u001b[38;5;124;03m>>> jt = G.to_junction_tree()\u001b[39;00m\n\u001b[0;32m    509\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    510\u001b[0m mm \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mto_markov_model()\n\u001b[1;32m--> 511\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_junction_tree\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\MarkovNetwork.py:573\u001b[0m, in \u001b[0;36mMarkovNetwork.to_junction_tree\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    571\u001b[0m \u001b[38;5;66;03m# To compute clique potential, initially set it as unity factor\u001b[39;00m\n\u001b[0;32m    572\u001b[0m var_card \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_cardinality()[x] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m node]\n\u001b[1;32m--> 573\u001b[0m clique_potential \u001b[38;5;241m=\u001b[39m \u001b[43mDiscreteFactor\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    574\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvar_card\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mones\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprod\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvar_card\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    575\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    576\u001b[0m \u001b[38;5;66;03m# multiply it with the factors associated with the variables present\u001b[39;00m\n\u001b[0;32m    577\u001b[0m \u001b[38;5;66;03m# in the clique (or node)\u001b[39;00m\n\u001b[0;32m    578\u001b[0m \u001b[38;5;66;03m# Checking if there's clique_factors, to handle the case when clique_factors\u001b[39;00m\n\u001b[0;32m    579\u001b[0m \u001b[38;5;66;03m# is empty, otherwise factor_product with throw an error [ref #889]\u001b[39;00m\n\u001b[0;32m    580\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m clique_factors:\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:111\u001b[0m, in \u001b[0;36mDiscreteFactor.__init__\u001b[1;34m(self, variables, cardinality, values, state_names)\u001b[0m\n\u001b[0;32m    109\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvariables \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(variables)\n\u001b[0;32m    110\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcardinality \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(cardinality, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m)\n\u001b[1;32m--> 111\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalues \u001b[38;5;241m=\u001b[39m \u001b[43mvalues\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcardinality\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;66;03m# Set the state names\u001b[39;00m\n\u001b[0;32m    114\u001b[0m \u001b[38;5;28msuper\u001b[39m(DiscreteFactor, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39mstore_state_names(\n\u001b[0;32m    115\u001b[0m     variables, cardinality, state_names\n\u001b[0;32m    116\u001b[0m )\n",
-      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 0 into shape (2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2)"
+      "1\n",
+      "0.0\n",
+      "2\n",
+      "0.0\n",
+      "3\n",
+      "0.0\n",
+      "4\n",
+      "0.0\n",
+      "5\n",
+      "0.0\n",
+      "6\n",
+      "0.0\n",
+      "7\n",
+      "0.0\n",
+      "8\n",
+      "0.0\n",
+      "1\n",
+      "0.0\n",
+      "2\n",
+      "0.0\n",
+      "3\n",
+      "0.0\n",
+      "4\n",
+      "0.0\n",
+      "5\n",
+      "0.0\n",
+      "6\n",
+      "0.0\n",
+      "7\n",
+      "0.0\n",
+      "8\n",
+      "0.0\n",
+      "/homes/nmh24/ImperialWork/Personnal_simulations/output_selection/strongly_connected_components/ag-nocycles_colored.dot\n"
      ]
     }
    ],
@@ -402,7 +376,7 @@
     "evidence = {}\n",
     "with open(output_file, 'w') as f:\n",
     "    f.write(to_dot(BAG, nodes, evidence))\n",
-    "with open(path + \"BAG_ref\" + \".dot\", 'w') as f:\n",
+    "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
     "    f.write(to_dot(BAG_ref, nodes, evidence))\n",
     "print(output_file)"
    ]
@@ -496,7 +470,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
+      "Cell \u001b[1;32mIn[352], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m get_all_ancestors(BAG_ref, \u001b[38;5;241m1\u001b[39m, honey_pot)\n\u001b[0;32m      3\u001b[0m src_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m c_node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mevidence_loc\u001b[49m:\n\u001b[0;32m      5\u001b[0m     get_all_ancestors(BAG_ref, c_node, src_node)\n\u001b[0;32m      6\u001b[0m honey_pot \u001b[38;5;241m=\u001b[39m honey_pot \u001b[38;5;241m-\u001b[39m src_node\n",
       "\u001b[1;31mNameError\u001b[0m: name 'evidence_loc' is not defined"
      ]
     }
